--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="https://img.icons8.com/?size=100&id=wK6CuxcefgtM&format=png&color=000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo List - Redux</title>
   </head>
-  <body class="bg-gray-500">
+  <body class="bg-gray-900 text-gray-200">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
